tests/paczka2/big_fuzzy/47238804.err
Error in line 1: k6MU5uQBp S341 33,8
Error in line 4: k6MU5uQBp S723 96,0
Error in line 7: k6MU5uQBp A823 7,1
Error in line 3: 9tKQipu A575 33,2
Error in line 9: 9tKQipu S341 32,9
Error in line 12: uoAMZT A575 72,9
Error in line 11: S723 S723 13,3
Error in line 38: S723 A575 45,5
Error in line 34: kskCL S341 0,4
Error in line 33: UpWZgf1H1 A575 89,8
Error in line 19: uoAMZT A823 44,7
Error in line 39: S723 S723 63,1
Error in line 48: S723 S341 67,0
Error in line 43: UpWZgf1H1 S341 90,0
Error in line 52: UpWZgf1H1 S723 85,9
Error in line 59: UpWZgf1H1 S341 20,0
Error in line 75: S723 A575 18,9
Error in line 79: ChsUc3X A823 20,8
Error in line 69: 9tKQipu S723 16,2
Error in line 94: S723 A823 4,0
Error in line 99: ChsUc3X A823 58,76
Error in line 98: kskCL A823 173,5
Error in line 95: uoAMZT S723 43,2
Error in line 105: ChsUc3X A823 66,2
Error in line 101: kskCL S723 25,3
Error in line 111: 9tKQipu S341 59,9
Error in line 104: uoAMZT A823 27,0
Error in line 118: k6MU5uQBp A575 54,3
Error in line 112: ChsUc3X S341 277,8
Error in line 124: ChsUc3X A823 -3,9
Error in line 113: 9tKQipu S723 90,8
Error in line 121: ChsUc3X A823 53,4
Error in line 127: ChsUc3X A575 61,8
Error in line 143: UpWZgf1H1 S723 87,7
Error in line 149: ChsUc3X A575 28,5
Error in line 164: kskCL S723 39,7
Error in line 155: uoAMZT S341 70,4
Error in line 184: 9tKQipu A575 80,0
Error in line 197: kskCL S723 -1,7
Error in line 190: kskCL S723 16,3
Error in line 205: ChsUc3X A575 90,6
Error in line 212: 9tKQipu A823 70,4
Error in line 210: ChsUc3X A823 87,8
Error in line 213: 9tKQipu S723 31,2
Error in line 214: ChsUc3X A575 39,5
Error in line 229: k6MU5uQBp A823 90,5
Error in line 232: uoAMZT S341 96,3
Error in line 236: uoAMZT S723 8,3
